--- a/index.html
+++ b/index.html
@@ -301,10 +301,10 @@
   </div>
 <!--Menu lateral-->
   <div class="menu" id="menu">
-    <a href="#">Home</a>
-    <a href="produtos.html">Produtos</a> <!-- Atualizado -->
-    <a href="#">Sobre nós</a>
-    <a href="#">Contato</a>
+    <a href="index.html">Início</a>
+    <a href="produtos.html">Produtos</a>
+    <a href="sobre.html">Sobre nós</a>
+    <a href="servicos.html">Serviços</a>
   </div>
   
 
