--- a/produtos.html
+++ b/produtos.html
@@ -138,11 +138,9 @@
 
   <!-- Menu Lateral -->
   <div class="side-menu" id="sideMenu">
-    <a href="#">Início</a>
-    <a href="#">Sobre</a>
-    <a href="#">Serviços</a>
-    <a href="#">Produtos</a>
-    <a href="#">Contato</a>
+    <a href="index.html">Início</a>
+    <a href="sobre.html">Sobre</a>
+    <a href="servicos.html">Serviços</a>
   </div>
 
   <header>
@@ -150,9 +148,10 @@
   </header>
 
   <section class="products">
-    <h2>Confira nossos produtos</h2>
+  <h1>
+      <img src="https://i.ibb.co/vx9223DG/e3cef7f2-4b0e-4ed2-8d35-1da16774bb4f.png" alt="Logo" width="500" height="150">
+    </h1>
     <div class="products-grid" id="product-list">
-      <!-- Produtos via JS -->
     </div>
   </section>
 
