--- a/produtos.html
+++ b/produtos.html
@@ -144,13 +144,13 @@
   </div>
 
   <header>
-    <h1>Produtos Omega Alarmes</h1>
-  </header>
-
-  <section class="products">
   <h1>
       <img src="https://i.ibb.co/vx9223DG/e3cef7f2-4b0e-4ed2-8d35-1da16774bb4f.png" alt="Logo" width="500" height="150">
     </h1>
+  </header>
+
+  <section class="products">
+  <h2>NOSSOS PRODUTOS</h2>
     <div class="products-grid" id="product-list">
     </div>
   </section>
